# testing-ocr-benchmark

./: .gitignore  README.md  change_ai_hub_json.py  dataset.py  demo.py  pyproject.toml  test.py  train.py
ai_hub_training_data/mdb_data/: README.md
modules/: feature_extraction.py
